# ChangeLog for dev-ruby/rspec
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.42 2009/03/23 19:35:15 graaff Exp $

*rspec-1.2.2 (23 Mar 2009)

  23 Mar 2009; Hans de Graaff <graaff@gentoo.org> +rspec-1.2.2.ebuild:
  Version bump with several enhancements

*rspec-1.2.0 (16 Mar 2009)

  16 Mar 2009; Hans de Graaff <graaff@gentoo.org> +rspec-1.2.0.ebuild:
  Version bump with many bug fixes and enhancements.

  16 Mar 2009; Hans de Graaff <graaff@gentoo.org> -rspec-1.1.4.ebuild:
  Remove old version

*rspec-1.1.12 (12 Jan 2009)

  12 Jan 2009; Hans de Graaff <graaff@gentoo.org> +rspec-1.1.12.ebuild:
  Version bump

  20 Dec 2008; Markus Meier <maekke@gentoo.org> rspec-1.1.11.ebuild:
  amd64/x86 stable, bug #250348

  14 Dec 2008; nixnut <nixnut@gentoo.org> rspec-1.1.11.ebuild:
  Stable on ppc wrt bug 250348

  12 Dec 2008; Hans de Graaff <graaff@gentoo.org> -rspec-1.0.8.ebuild,
  -rspec-1.1.3.ebuild, -rspec-1.1.8.ebuild, -rspec-1.1.9.ebuild,
  -rspec-1.1.10.ebuild:
  Remove old versions

  10 Dec 2008; Ferris McCormick <fmccor@gentoo.org> rspec-1.1.11.ebuild:
  Add ~sparc keyword, part of Bug #250348.

  09 Dec 2008; Brent Baude <ranger@gentoo.org> rspec-1.1.11.ebuild:
  Marking rspec-1.1.11 ~ppc64 for bug 250348

  25 Oct 2008; Hans de Graaff <graaff@gentoo.org> rspec-1.1.11.ebuild:
  Add back hoe dependency because it is still listed as a runtime dependency

*rspec-1.1.11 (25 Oct 2008)

  25 Oct 2008; Hans de Graaff <graaff@gentoo.org> +rspec-1.1.11.ebuild:
  Version bump that no longer requires development-only dependencies

*rspec-1.1.10 (24 Oct 2008)

  24 Oct 2008; Hans de Graaff <graaff@gentoo.org> +rspec-1.1.10.ebuild:
  Version bump with one minor enhancement and two minor bugfixes.

*rspec-1.1.9 (21 Oct 2008)

  21 Oct 2008; Hans de Graaff <graaff@gentoo.org> +rspec-1.1.9.ebuild:
  Version bump. Deprecated functionality has been removed and a number of bugs