@@ -2,9 +2,11 @@ DIST rspec-1.1.11.gem 269824 RMD160 40ec791e226c9b50f733983cfd19774feac7ab5f SHA
 DIST rspec-1.1.12.gem 274944 RMD160 e910463e38093f946a9c670d9b52b8c0ce4b132f SHA1 5e39b64d8b2a7268c6414598753cf0c8daeac8c9 SHA256 7d5ac61a6fab572481d4c742577b4dbc4e9b385d5b9240aa7f2dcd4957c97fc8
 DIST rspec-1.2.0.gem 187904 RMD160 bfa533b644610d0aa28c0f04747684ea68f40ce3 SHA1 c5fa6d06a87fc082ca988688aff45ee61529abe0 SHA256 970b2ffca4283d8d34c914f25dedd6cdb2d9b36d36c4d0f6dd99571ffa5f854a
 DIST rspec-1.2.2.gem 193024 RMD160 5c34544d8bc9116ca718642a46d1666acfbade27 SHA1 658b0721324c64cff0ce7333142c3898ea17e6b5 SHA256 dfc12897fde86184660f5c8680f0913ed8585a0fc588246d5278ff564aef35c5
+DIST rspec-1.2.4.gem 197632 RMD160 c9a6b7c662938265913ade915266b78624c5084d SHA1 81cf367296694aa289bf4138612e0a05e566de66 SHA256 e32d86999993479e785710213737d1b2ee2b7e8ab195a474939f444b581ae2cf
 EBUILD rspec-1.1.11.ebuild 474 RMD160 5ca03f205f68cd7a8ad0bcd0425eace29ab2a14f SHA1 96b59b3f28198e164fc01632b17684f0357dc431 SHA256 a26b3a9a50955f8937c86dd60bfdfe9a50400449e9b204fd3da371ab8a5d5fba
 EBUILD rspec-1.1.12.ebuild 479 RMD160 af088f6401212a7cfb06cb8db71d6e123aad991d SHA1 920ef213245b899ab79a582fc7413fb657a5bf84 SHA256 acf98719445ad7001c83ca2d5c3d3649cb6b6fd5ee876e5d45f378ea9cd8d93e
 EBUILD rspec-1.2.0.ebuild 478 RMD160 35b3b7f8e9ce82ef2fa4ffcca22ca9cd45277b93 SHA1 13d2777e6b9f76aeb472c76fa3eb4099ede11b10 SHA256 da2b58cff8287203da67526ea26f0cec50a9ba8e657465c6c9524a28b507458e
 EBUILD rspec-1.2.2.ebuild 497 RMD160 ea11a014a6b36e08a62844ded61536ca156e6085 SHA1 4c66706f1dd64c0d85c75e14fc2437202e15c1b6 SHA256 dbe5bfa075e2bb58f272287905d36b1bc78390a76c9a9617a7cd344d940b4f20
-MISC ChangeLog 6047 RMD160 34b67f310a35ffeca92ac442c4347c7c8c738473 SHA1 641c2abb572f393bff84b4a6bc9bb82090a99ce8 SHA256 2584760c8fb92745941d400b68fbbe96063528eb223ea6c73c22ddd22489e29b
+EBUILD rspec-1.2.4.ebuild 497 RMD160 d36d92f90254c0e9e5954645e8e86a880d398232 SHA1 48078a06e02f452da8e201bfc940da6259459c47 SHA256 a8da558a328e1c8133f25513a8762fa1f408e8e31894971bbf514bec4c85a829
+MISC ChangeLog 6163 RMD160 25b33430b6d62ab97b871f4315b0df7713b2f05e SHA1 cfa818df0fec17eda60b2d164c90d84c945152d7 SHA256 d74a89e67397adc1302c50fb34d1acddee867cf64351e4da9afc6abc679f5071
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
