@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rspec
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.42 2009/03/23 19:35:15 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.43 2009/04/14 19:38:23 graaff Exp $
+
+*rspec-1.2.4 (14 Apr 2009)
+
+  14 Apr 2009; Hans de Graaff <graaff@gentoo.org> +rspec-1.2.4.ebuild:
+  Version bump.
 
 *rspec-1.2.2 (23 Mar 2009)
 
